epub4j-native/cpp/include/epub_native.h

// ============================================================================
// Error Codes
// ============================================================================

typedef enum {
    EPUB_NATIVE_SUCCESS = 0,
    EPUB_NATIVE_ERROR_PARSE = 1,
    EPUB_NATIVE_ERROR_IO = 2,
    EPUB_NATIVE_ERROR_MEMORY = 3,
    EPUB_NATIVE_ERROR_INVALID_ARG = 4,
    EPUB_NATIVE_ERROR_NOT_FOUND = 5,
    EPUB_NATIVE_ERROR_NAMESPACE = 6
} EpubNativeError;
typedef struct EpubNativeEncodingDetector EpubNativeEncodingDetector;
typedef struct EpubNativeArchive EpubNativeArchive;
// ============================================================================
// Encoding Detection
// ============================================================================

/**
 * Create encoding detector instance
 * @param out_detector Output detector pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_encoding_detector_create(
    EpubNativeEncodingDetector** out_detector
);
/**
 * Free encoding detector instance
 * @param detector Detector to free
 */
EPUB_NATIVE_API void epub_native_encoding_detector_free(
    EpubNativeEncodingDetector* detector
);
/**
 * Detect encoding of byte data
 * @param detector Encoding detector instance
 * @param data Input byte data
 * @param data_length Length of input data
 * @param out_encoding Detected encoding name (caller must free with epub_native_string_free)
 * @param out_confidence Confidence score 0-100
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_detect_encoding(
    EpubNativeEncodingDetector* detector,
    const char* data,
    size_t data_length,
    char** out_encoding,
    int* out_confidence
);
/**
 * Convert text from one encoding to UTF-8
 * @param source_encoding Source encoding name (e.g., "ISO-8859-1")
 * @param source_data Source data
 * @param source_length Source data length
 * @param out_utf8 Output UTF-8 data (caller must free with epub_native_string_free)
 * @param out_utf8_length Output UTF-8 data length
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_convert_to_utf8(
    const char* source_encoding,
    const char* source_data,
    size_t source_length,
    char** out_utf8,
    size_t* out_utf8_length
);
// ============================================================================
// Archive Handling (libarchive-based ZIP support)
// ============================================================================

/**
 * Open an archive (ZIP/EPUB) file
 * @param filepath Path to archive file
 * @param out_archive Output archive pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_archive_open(
    const char* filepath,
    EpubNativeArchive** out_archive
);
/**
 * Open an archive from memory buffer
 * @param data Archive data bytes
 * @param data_length Data length
 * @param out_archive Output archive pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_archive_open_memory(
    const char* data,
    size_t data_length,
    EpubNativeArchive** out_archive
);
/**
 * Close and free an archive
 * @param archive Archive to free
 */
EPUB_NATIVE_API void epub_native_archive_free(EpubNativeArchive* archive);
/**
 * Get list of all entries in the archive
 * @param archive Archive handle
 * @param out_entries Output array of entry paths (caller must free with epub_native_archive_free_string_array)
 * @param out_count Output count of entries
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_archive_list_entries(
    EpubNativeArchive* archive,
    char*** out_entries,
    size_t* out_count
);
/**
 * Free string array returned by archive functions
 * @param entries Array to free
 * @param count Count of entries
 */
EPUB_NATIVE_API void epub_native_archive_free_string_array(
    char** entries,
    size_t count
);