epub4j-native/java/src/main/java/org/grimmory/epub4j/native_parsing/EpubNativeHeaders.java


    public static MethodHandle epub_native_encoding_detector_create$handle() {
        return epub_native_encoding_detector_create.HANDLE;
    }

    public static MemorySegment epub_native_encoding_detector_create$address() {
        return epub_native_encoding_detector_create.ADDR;
    }

    public static int epub_native_encoding_detector_create(MemorySegment out_detector) {
        var mh$ = epub_native_encoding_detector_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_encoding_detector_create", out_detector);
            }
            return (int)mh$.invokeExact(out_detector);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_encoding_detector_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_encoding_detector_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_encoding_detector_free$descriptor() {
        return epub_native_encoding_detector_free.DESC;
    }

    public static MethodHandle epub_native_encoding_detector_free$handle() {
        return epub_native_encoding_detector_free.HANDLE;
    }

    public static MemorySegment epub_native_encoding_detector_free$address() {
        return epub_native_encoding_detector_free.ADDR;
    }

    public static void epub_native_encoding_detector_free(MemorySegment detector) {
        var mh$ = epub_native_encoding_detector_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_encoding_detector_free", detector);
            }
            mh$.invokeExact(detector);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_detect_encoding {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_detect_encoding");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_detect_encoding$descriptor() {
        return epub_native_detect_encoding.DESC;
    }

    public static MethodHandle epub_native_detect_encoding$handle() {
        return epub_native_detect_encoding.HANDLE;
    }

    public static MemorySegment epub_native_detect_encoding$address() {
        return epub_native_detect_encoding.ADDR;
    }

    public static int epub_native_detect_encoding(MemorySegment detector, MemorySegment data, long data_length, MemorySegment out_encoding, MemorySegment out_confidence) {
        var mh$ = epub_native_detect_encoding.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_detect_encoding", detector, data, data_length, out_encoding, out_confidence);
            }
            return (int)mh$.invokeExact(detector, data, data_length, out_encoding, out_confidence);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_convert_to_utf8 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_convert_to_utf8");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_convert_to_utf8$descriptor() {
        return epub_native_convert_to_utf8.DESC;
    }

    public static MethodHandle epub_native_convert_to_utf8$handle() {
        return epub_native_convert_to_utf8.HANDLE;
    }

    public static MemorySegment epub_native_convert_to_utf8$address() {
        return epub_native_convert_to_utf8.ADDR;
    }

    public static int epub_native_convert_to_utf8(MemorySegment source_encoding, MemorySegment source_data, long source_length, MemorySegment out_utf8, MemorySegment out_utf8_length) {
        var mh$ = epub_native_convert_to_utf8.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_convert_to_utf8", source_encoding, source_data, source_length, out_utf8, out_utf8_length);
            }
            return (int)mh$.invokeExact(source_encoding, source_data, source_length, out_utf8, out_utf8_length);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_archive_open {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_archive_open");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_archive_open$descriptor() {
        return epub_native_archive_open.DESC;
    }

    public static MethodHandle epub_native_archive_open$handle() {
        return epub_native_archive_open.HANDLE;
    }

    public static MemorySegment epub_native_archive_open$address() {
        return epub_native_archive_open.ADDR;
    }

    public static int epub_native_archive_open(MemorySegment filepath, MemorySegment out_archive) {
        var mh$ = epub_native_archive_open.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_archive_open", filepath, out_archive);
            }
            return (int)mh$.invokeExact(filepath, out_archive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_archive_open_memory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_archive_open_memory");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_archive_open_memory$descriptor() {
        return epub_native_archive_open_memory.DESC;
    }

    public static MethodHandle epub_native_archive_open_memory$handle() {
        return epub_native_archive_open_memory.HANDLE;
    }

    public static MemorySegment epub_native_archive_open_memory$address() {
        return epub_native_archive_open_memory.ADDR;
    }

    public static int epub_native_archive_open_memory(MemorySegment data, long data_length, MemorySegment out_archive) {
        var mh$ = epub_native_archive_open_memory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_archive_open_memory", data, data_length, out_archive);
            }
            return (int)mh$.invokeExact(data, data_length, out_archive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_archive_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_archive_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_archive_free$descriptor() {
        return epub_native_archive_free.DESC;
    }

    public static MethodHandle epub_native_archive_free$handle() {
        return epub_native_archive_free.HANDLE;
    }

    public static MemorySegment epub_native_archive_free$address() {
        return epub_native_archive_free.ADDR;
    }

    public static void epub_native_archive_free(MemorySegment archive) {
        var mh$ = epub_native_archive_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_archive_free", archive);
            }
            mh$.invokeExact(archive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_archive_list_entries {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_archive_list_entries");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_archive_list_entries$descriptor() {
        return epub_native_archive_list_entries.DESC;
    }

    public static MethodHandle epub_native_archive_list_entries$handle() {
        return epub_native_archive_list_entries.HANDLE;
    }

    public static MemorySegment epub_native_archive_list_entries$address() {
        return epub_native_archive_list_entries.ADDR;
    }

    public static int epub_native_archive_list_entries(MemorySegment archive, MemorySegment out_entries, MemorySegment out_count) {
        var mh$ = epub_native_archive_list_entries.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_archive_list_entries", archive, out_entries, out_count);
            }
            return (int)mh$.invokeExact(archive, out_entries, out_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_archive_free_string_array {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_archive_free_string_array");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_archive_free_string_array$descriptor() {
        return epub_native_archive_free_string_array.DESC;
    }
